# cpp_template

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
